# platzi_fastapi_1

./: .gitignore  crud.py  data.py  database.sqlite  database_operations.py  filters.py  main.py  models.py  pyproject.toml  security.py
app/: crud.py  data.py  main.py  movies.db  security.py
app/config/: database.py
app/models/: models.py  schemas.py
app/routers/: movie.py
config/: database.py  security.py
models/: models.py
