[tool.poetry]
name = "platzi-fastapi-1"
version = "0.0.1"
description = ""
authors = ["Ulises Alexander Arguelles Monjaraz <30351520+UlisesAlexanderAM@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "platzi_fastapi_1"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
pylint = "^2.17.4"
ruff = "^0.0.270"
mypy = "^1.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
